[gd_scene load_steps=34 format=2]

[ext_resource path="res://Fonts/x12y16pxLineLinker.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Textures/Character.png" type="Texture" id=2]
[ext_resource path="res://TitleCharacterAnimatedSprite.gd" type="Script" id=3]
[ext_resource path="res://Title.gd" type="Script" id=4]
[ext_resource path="res://StartLabel.gd" type="Script" id=5]
[ext_resource path="res://Sounds/start.mp3" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 864, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 912, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 960, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 1008, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 1056, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 1104, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 432, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 528, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 576, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 624, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 672, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 720, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 816, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "Dash",
"speed": 12.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Default",
"speed": 12.0
} ]

[node name="Title" type="Node2D"]
script = ExtResource( 4 )

[node name="StartSE" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="TitleUI" type="CanvasLayer" parent="."]

[node name="TitleLabel" type="Label" parent="TitleUI"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -90.0
margin_bottom = -49.0
custom_fonts/font = SubResource( 2 )
text = "YOZORA
MAKER"
align = 1

[node name="StartLabel" type="Label" parent="TitleUI"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 1.0
margin_top = 60.0
margin_right = 1.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 1 )
text = "TAP START"
align = 1
script = ExtResource( 5 )

[node name="TitleCharacterAnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 68, 120 )
frames = SubResource( 21 )
animation = "Default"
frame = 1
playing = true
flip_h = true
script = ExtResource( 3 )

[node name="GameStartTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="title_screen_tap" from="." to="TitleUI/StartLabel" method="_on_Title_title_screen_tap"]
[connection signal="title_screen_tap" from="." to="TitleCharacterAnimatedSprite" method="_on_Title_title_screen_tap"]
[connection signal="timeout" from="GameStartTimer" to="." method="_on_GameStartTimer_timeout"]
